--- a/app/src/main/res/layout/activity_view_assignments_in_one_course.xml
+++ b/app/src/main/res/layout/activity_view_assignments_in_one_course.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#A6CFD5"
+    android:orientation="vertical">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -22,20 +23,23 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:background="@color/design_default_color_secondary"
-        android:text="Assignments:"/>
+        android:gravity="center"
+        android:text="Assignments:" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_assignments"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:background="#A6CFD5" />
 
     <Button
+        android:id="@+id/back"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/rounded_corners"
         android:text="Back"
-        android:id="@+id/back"/>
+        android:textColor="#DBFCFF" />
 
 </LinearLayout>
