--- a/app/src/main/res/layout/activity_view_course.xml
+++ b/app/src/main/res/layout/activity_view_course.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#A6CFD5"
+    android:orientation="vertical">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -22,47 +23,51 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="25dp"
         android:background="@color/design_default_color_secondary"
-        android:text="These are the Courses avilable to enroll in"/>
+        android:gravity="center"
+        android:text="These are the Courses avilable to enroll in"
+        android:textSize="25dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_2"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:background="#A6CFD5" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:background="@color/design_default_color_secondary"
-        android:text="Select the Course you'd like to enroll in. Please enter the correct course ID to enroll in course."/>
+        android:gravity="center"
+        android:text="Select the Course you'd like to enroll in. Please enter the correct course ID to enroll in course." />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/design_default_color_primary_dark"
-        android:text="Enter ID Here"/>
+        android:text="Enter ID Here"
+        android:textColor="@color/design_default_color_primary_dark" />
+
     <EditText
+        android:id="@+id/course_id"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/course_id"/>
+        android:layout_height="wrap_content" />
+
     <Button
+        android:id="@+id/select_course"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/rounded_corners"
         android:text="Select course"
-        android:id="@+id/select_course"/>
+        android:textColor="#DBFCFF" />
 
     <Button
+        android:id="@+id/main_menu_course"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/rounded_corners"
         android:text="Main Menu"
-        android:id="@+id/main_menu_course"/>
-
-
-
+        android:textColor="#DBFCFF" />
 
 
 </LinearLayout>
