--- a/app/src/main/res/layout/activity_view_grade2.xml
+++ b/app/src/main/res/layout/activity_view_grade2.xml
@@ -2,9 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#A6CFD5"
+    android:orientation="vertical">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -21,48 +22,53 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <TextView
+        android:id="@+id/grade_text_course"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="22dp"
-        android:id="@+id/grade_text_course"
         android:background="@color/design_default_color_secondary"
-        android:text=""/>
+        android:gravity="center"
+        android:text=""
+        android:textSize="22dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_grades_category"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:background="#A6CFD5" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="18dp"
         android:background="@color/design_default_color_secondary"
-        android:text="Here are your Grades Per Assignment. "/>
+        android:gravity="center"
+        android:text="Here are your Grades Per Assignment. "
+        android:textSize="18dp" />
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_grades_2"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:background="#A6CFD5" />
 
     <TextView
+        android:id="@+id/grade_letter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/design_default_color_secondary"
-        android:textSize="18dp"
-        android:id="@+id/grade_letter"
-        android:text=""/>
+        android:text=""
+        android:textSize="18dp" />
+
     <Button
         android:id="@+id/back_button_grade"
-        android:layout_width="wrap_content"
+        android:layout_width="347dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:background="@drawable/rounded_corners"
         android:text="Back"
+        android:textColor="#DBFCFF"
         tools:layout_editor_absoluteX="161dp"
         tools:layout_editor_absoluteY="457dp" />
 
