--- a/app/src/main/res/layout/addcourse.xml
+++ b/app/src/main/res/layout/addcourse.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/title_addcourse"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#A6CFD5">
 
     <TextView
         android:id="@+id/textViewTitle"
@@ -131,15 +132,15 @@
 
     <Button
         android:id="@+id/btnAddCourse"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="319dp"
+        android:layout_height="54dp"
         android:layout_marginStart="153dp"
-        android:layout_marginLeft="153dp"
         android:layout_marginTop="516dp"
         android:layout_marginEnd="170dp"
-        android:layout_marginRight="170dp"
         android:layout_marginBottom="167dp"
+        android:background="@drawable/rounded_corners"
         android:text="@string/submit"
+        android:textColor="#DBFCFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -147,9 +148,11 @@
 
     <Button
         android:id="@+id/back_button_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="121dp"
+        android:layout_height="45dp"
+        android:background="@drawable/rounded_corners"
         android:text="back"
+        android:textColor="#DBFCFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.089"
