--- a/app/src/main/res/layout/editassignment_activity.xml
+++ b/app/src/main/res/layout/editassignment_activity.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#A6CFD5">
 
 
     <TextView
@@ -23,13 +24,15 @@
 
     <Button
         android:id="@+id/enter_course_edit_button"
-        android:layout_width="286dp"
-        android:layout_height="55dp"
+        android:layout_width="351dp"
+        android:layout_height="56dp"
         android:layout_marginStart="120dp"
         android:layout_marginTop="147dp"
         android:layout_marginEnd="147dp"
         android:layout_marginBottom="536dp"
+        android:background="@drawable/rounded_corners"
         android:text="Search Assignment"
+        android:textColor="#DBFCFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.408"
@@ -92,13 +95,15 @@
 
     <Button
         android:id="@+id/edit_assignment_button2"
-        android:layout_width="324dp"
-        android:layout_height="52dp"
+        android:layout_width="361dp"
+        android:layout_height="58dp"
         android:layout_marginStart="117dp"
         android:layout_marginTop="466dp"
         android:layout_marginEnd="118dp"
         android:layout_marginBottom="217dp"
+        android:background="@drawable/rounded_corners"
         android:text="Confirm Assignment"
+        android:textColor="#DBFCFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -106,17 +111,21 @@
 
     <Button
         android:id="@+id/BackBtn_2"
-        android:layout_width="81dp"
-        android:layout_height="49dp"
+        android:layout_width="114dp"
+        android:layout_height="44dp"
         android:layout_marginStart="19dp"
         android:layout_marginTop="631dp"
         android:layout_marginEnd="311dp"
         android:layout_marginBottom="51dp"
+        android:background="@drawable/rounded_corners"
         android:text="BACK"
+        android:textColor="#DBFCFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.09"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.8" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
