--- a/app/src/main/res/layout/editcourse_activity.xml
+++ b/app/src/main/res/layout/editcourse_activity.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#A6CFD5"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -21,32 +22,35 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="Please Select a course by entering the appropriate Coruse ID"
-    android:background="@color/design_default_color_secondary"
-    android:gravity = "center"
-    android:textSize="23dp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/design_default_color_secondary"
+        android:gravity="center"
+        android:text="Please Select a course by entering the appropriate Coruse ID"
+        android:textSize="23dp" />
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="40dp"/>
+        android:layout_height="40dp" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text = "Enter Course ID:"/>
+        android:text="Enter Course ID:" />
 
     <EditText
+        android:id="@+id/enter_course_id_edit"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/enter_course_id_edit" />
+        android:layout_height="wrap_content" />
+
     <Button
+        android:id="@+id/search_course_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/rounded_corners"
         android:text="Search Courser"
-        android:id="@+id/search_course_edit"/>
+        android:textColor="#DBFCFF" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_course_edit"
@@ -57,30 +61,38 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Edit Instructor"/>
+        android:text="Edit Instructor" />
+
     <EditText
+        android:id="@+id/edit_instructor"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/edit_instructor"/>
+        android:layout_height="wrap_content" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Edit End Date"/>
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/edit_end_date"/>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Edit Course"
-        android:id="@+id/edit_course_final"/>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/edit_course_back"
-        android:text="back"/>
+        android:text="Edit End Date" />
 
+    <EditText
+        android:id="@+id/edit_end_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/edit_course_final"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_corners"
+        android:text="Edit Course"
+        android:textColor="#DBFCFF" />
+
+    <Button
+        android:id="@+id/edit_course_back"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_corners"
+        android:text="back"
+        android:textColor="#DBFCFF" />
 
 
 </LinearLayout>
