--- a/app/src/main/res/layout/menumain_activity.xml
+++ b/app/src/main/res/layout/menumain_activity.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#A6CFD5"
     android:orientation="vertical">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar2"
-            android:layout_width="409dp"
-            android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="1dp" />
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar2"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="1dp" />
 
     <TextView
+        android:id="@+id/welcome_user_msg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity = "center"
-        android:textSize="30dp"
-        android:id="@+id/welcome_user_msg"
-        android:text=""/>
+        android:gravity="center"
+        android:text=""
+        android:textSize="30dp" />
 
 
     <Button
@@ -34,20 +34,24 @@
         android:layout_gravity="center"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
+        android:background="@drawable/rounded_corners"
         android:text="View Courses"
+        android:textColor="#DBFCFF"
         tools:layout_editor_absoluteX="78dp"
         tools:layout_editor_absoluteY="187dp" />
 
 
-        <Button
-            android:id="@+id/assignment_button"
-            android:layout_width="273dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|fill_vertical"
-            android:layout_marginBottom="10dp"
-            android:text="View Assignments"
-            tools:layout_editor_absoluteX="64dp"
-            tools:layout_editor_absoluteY="318dp" />
+    <Button
+        android:id="@+id/assignment_button"
+        android:layout_width="273dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|fill_vertical"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/rounded_corners"
+        android:text="View Assignments"
+        android:textColor="#DBFCFF"
+        tools:layout_editor_absoluteX="64dp"
+        tools:layout_editor_absoluteY="318dp" />
 
     <Button
         android:id="@+id/gradesView_button"
@@ -55,7 +59,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="10dp"
+        android:background="@drawable/rounded_corners"
         android:text="View Grades"
+        android:textColor="#DBFCFF"
         tools:layout_editor_absoluteX="78dp"
         tools:layout_editor_absoluteY="187dp" />
 
@@ -64,10 +70,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:background="@drawable/rounded_corners"
         android:text="Logout"
+        android:textColor="#DBFCFF"
         tools:layout_editor_absoluteX="161dp"
         tools:layout_editor_absoluteY="457dp" />
-
 
 
 </LinearLayout>
