--- a/app/src/main/res/layout/viewgrades_activity.xml
+++ b/app/src/main/res/layout/viewgrades_activity.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#A6CFD5"
+    android:orientation="vertical">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -22,10 +23,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="25dp"
         android:background="@color/design_default_color_secondary"
-        android:text="These are the grades available to view"/>
+        android:gravity="center"
+        android:text="These are the grades available to view"
+        android:textSize="25dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_2"
@@ -34,16 +35,20 @@
         android:layout_weight="1" />
 
     <Button
+        android:id="@+id/main_menu_course"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/rounded_corners"
         android:text="Main Menu"
-        android:id="@+id/main_menu_course"/>
+        android:textColor="#DBFCFF" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:background="@drawable/rounded_corners"
+        android:text="Button"
+        android:textColor="#DBFCFF" />
 
 
 </LinearLayout>
