--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,9 @@
         android:gravity="center"
         android:scaleX="2"
         android:scaleY="2"
-        android:text="Welcome to Grade App!" />
+        android:text="Welcome to Grade App!"
+        android:textColor="#F56476"
+        android:textSize="18sp" />
 
     <TextView
         android:layout_width="match_parent"
@@ -47,13 +49,15 @@
         android:id="@+id/username_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="USERNAME" />
+        android:hint="USERNAME"
+        android:textSize="24sp" />
 
     <EditText
         android:id="@+id/password_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="PASSWORD" />
+        android:hint="PASSWORD"
+        android:textSize="24sp" />
 
     <Button
         android:id="@+id/loginbutton_main"
