--- a/app/src/main/res/layout/deletecourse_activity.xml
+++ b/app/src/main/res/layout/deletecourse_activity.xml
@@ -45,7 +45,7 @@
 
 
     <Button
-        android:id="@+id/back_button"
+        android:id="@+id/back_button_delete"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
