--- a/app/src/main/res/layout/delete_assignments.xml
+++ b/app/src/main/res/layout/delete_assignments.xml
@@ -3,28 +3,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#A6CFD5">
 
     <TextView
         android:id="@+id/textViewDeleteAssignment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="201dp"
+        android:layout_height="33dp"
         android:layout_marginStart="118dp"
         android:layout_marginTop="127dp"
         android:layout_marginEnd="175dp"
         android:layout_marginBottom="585dp"
         android:text="Delete Assignment"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.156"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/deleteAssignmentId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="301dp"
+        android:layout_height="67dp"
         android:layout_marginStart="71dp"
         android:layout_marginTop="191dp"
         android:layout_marginEnd="130dp"
@@ -34,30 +36,43 @@
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.154"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/submitBtn"
-        android:layout_width="143dp"
-        android:layout_height="41dp"
+        android:layout_width="303dp"
+        android:layout_height="53dp"
         android:layout_marginStart="103dp"
         android:layout_marginTop="264dp"
         android:layout_marginEnd="165dp"
         android:layout_marginBottom="426dp"
+        android:background="@drawable/rounded_corners"
         android:text="SUBMIT"
+        android:textColor="#DBFCFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.27"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/backBtn"
         android:layout_width="125dp"
         android:layout_height="46dp"
-        android:layout_marginTop="348dp"
-        android:layout_marginEnd="172dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="569dp"
+        android:layout_marginEnd="274dp"
+        android:layout_marginBottom="116dp"
+        android:background="@drawable/rounded_corners"
         android:text="Back"
+        android:textColor="#DBFCFF"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
