--- a/app/src/main/res/layout/menumain_activity.xml
+++ b/app/src/main/res/layout/menumain_activity.xml
@@ -10,7 +10,7 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar2"
-        android:layout_width="409dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
@@ -18,12 +18,20 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="1dp" />
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="76dp"
+        android:background="?attr/colorPrimary"
+        app:srcCompat="@drawable/icons8_homework" />
+
     <TextView
         android:id="@+id/welcome_user_msg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text=""
+        android:textColor="#F56476"
         android:textSize="30dp" />
 
 
