--- a/app/src/main/res/layout/activity_view_grades.xml
+++ b/app/src/main/res/layout/activity_view_grades.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:background="@color/design_default_color_secondary"
         android:gravity="center"
-        android:text="Here are your current courses you are enrolled in. Please Enter the 'Class ID' of the class Grade you'd like to see."
+        android:text="Here are your current courses you are enrolled in. Click a class to view your grades in it."
         android:textSize="22dp" />
 
 
@@ -34,34 +34,6 @@
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:layout_weight="1" />
-
-
-    <TextView
-        android:id="@+id/gpa_student"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="ENTER COURSE ID"
-        android:textSize="30dp" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="57dp"
-        android:text="Enter Course ID Here" />
-
-    <EditText
-        android:id="@+id/course_id_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="ENTER COURSE ID" />
-
-    <Button
-        android:id="@+id/course_id_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/rounded_corners"
-        android:text="View Course Grades"
-        android:textColor="#DBFCFF" />
 
     <Button
         android:id="@+id/main_menu_grades"
